[package]
name = "easy-async"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["xpxc"]

[dependencies]
# unblock Stream
futures-core = { version = "*" }
# unblock
async-channel = { version = "*" }
# unblock
piper = { version = "*" }
# unblock
futures-io = { version = "*" }
# unblock
futures-util = { version = "*" }
# executor,blocking
concurrent-queue = { version = "*" }
# executor
num_cpus = { version = "*" }

[dev-dependencies]
reqwest = { version = "*" }
easy-parallel = { version = "*" }
smol = { version = "*" }
futures = { version = "*" }
