[package]
name = "easy-async"
version = "0.1.0"
edition = "2021"

[features]
unblock = [
    "futures-core",
    "async-channel",
    "piper",
    "futures-io",
    "futures-util",
]

[dependencies]
# executor,blocking
concurrent-queue = { version = "*" }
# executor
num_cpus = { version = "*" }


# unblock Stream
futures-core = { version = "*", optional = true }
# unblock
async-channel = { version = "*", optional = true }
# unblock
piper = { version = "*", optional = true }
# unblock
futures-io = { version = "*", optional = true }
# unblock
futures-util = { version = "*", optional = true }


[dev-dependencies]
reqwest = { version = "*" }
easy-parallel = { version = "*" }
smol = { version = "*" }
futures = { version = "*" }
